fix(manager): shorten port name to comply with k8s limits

--- a/core/b2b/core-services/soc/04-manager.yaml
+++ b/core/b2b/core-services/soc/04-manager.yaml
@@ -45,7 +45,7 @@ spec:
               value: "admin"
           ports:
             - containerPort: 1514
-              name: agent-connection
+              name: agent-conn
             - containerPort: 1515
               name: agent-auth
             - containerPort: 55000
