--- a/core/b2b/core-services/soc/04-manager.yaml
+++ b/core/b2b/core-services/soc/04-manager.yaml
@@ -100,3 +100,63 @@ spec:
     - name: api
       port: 55000
       targetPort: 55000
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: wazuh-manager-conf
+  namespace: soc
+data:
+  ossec.conf: |
+    <ossec_config>
+      <global>
+        <jsonout_output>yes</jsonout_output>
+        <alerts_log>yes</alerts_log>
+        <logall>no</logall>
+        <logall_json>no</logall_json>
+        <email_notification>no</email_notification>
+        <smtp_server>smtp.example.wazuh.com</smtp_server>
+        <email_from>wazuh@example.wazuh.com</email_from>
+        <email_to>recipient@example.wazuh.com</email_to>
+        <email_maxperhour>12</email_maxperhour>
+        <email_log_source>alerts.log</email_log_source>
+      </global>
+
+      <alerts>
+        <log_alert_level>3</log_alert_level>
+        <email_alert_level>12</email_alert_level>
+      </alerts>
+
+      <remote>
+        <connection>secure</connection>
+        <port>1514</port>
+        <protocol>tcp</protocol>
+        <queue_size>131072</queue_size>
+      </remote>
+
+      <auth>
+        <disabled>no</disabled>
+        <port>1515</port>
+        <use_source_ip>no</use_source_ip>
+        <force_insert>yes</force_insert>
+        <force_time>0</force_time>
+        <purge>yes</purge>
+        <use_password>no</use_password>
+        <limit_maxagents>yes</limit_maxagents>
+        <ciphers>HIGH:!ADH:!EXP:!MD5:!RC4:!3DES:!CAMELLIA:@STRENGTH</ciphers>
+      </auth>
+
+      <indexer>
+        <enabled>yes</enabled>
+        <hosts>
+          <host>https://wazuh-indexer:9200</host>
+        </hosts>
+        <ssl>
+          <certificate_authorities>
+            <ca>/var/ossec/etc/root-ca.pem</ca>
+          </certificate_authorities>
+          <certificate>/var/ossec/etc/manager.pem</certificate>
+          <key>/var/ossec/etc/manager-key.pem</key>
+        </ssl>
+      </indexer>
+    </ossec_config>
