--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -3,13 +3,13 @@ kind: Kustomization
 namespace: soc
 
 resources:
-  - 00-certs-generator.yaml
+  - 00-setup-job.yaml
   - namespace.yaml
   - storage.yaml
-  - 01-wazuh-indexer.yaml
-  - 02-wazuh-manager.yaml
-  - 03-wazuh-dashboard.yaml
-  - 04-wazuh-security-init.yaml
+  # - 01-wazuh-indexer.yaml
+  # - 02-wazuh-manager.yaml
+  # - 03-wazuh-dashboard.yaml
+  # - 04-wazuh-security-init.yaml
 
 commonLabels:
   environment: production
