--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - storage.yaml
   - 01-wazuh-indexer.yaml
   - 02-wazuh-manager.yaml
+  - 03-dashboard-config.yaml
   - 03-wazuh-dashboard.yaml
   - 04-wazuh-security-init.yaml
 
