fix(soc): align PV/PVC storage class and capacity

--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -5,6 +5,8 @@ namespace: soc
 resources:
   - 00-setup-job.yaml
   - namespace.yaml
+  - wazuh-indexer-pv.yaml
+  - wazuh-manager-pv.yaml
   - storage.yaml
   - 01-wazuh-indexer.yaml
   - 02-wazuh-manager.yaml
