--- a/core/b2b/core-services/soc/storage.yaml
+++ b/core/b2b/core-services/soc/storage.yaml
@@ -4,6 +4,7 @@ metadata:
   name: wazuh-indexer-data
   namespace: soc
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
@@ -16,6 +17,7 @@ metadata:
   name: wazuh-manager-data
   namespace: soc
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
