fix(soc): rotate PVCs to v2 to enforce storage class

--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -118,7 +118,7 @@ spec:
       volumes:
         - name: wazuh-indexer-data
           persistentVolumeClaim:
-            claimName: wazuh-indexer-data
+            claimName: wazuh-indexer-data-v2
         - name: wazuh-indexer-certs
           secret:
             secretName: wazuh-indexer-certs
