--- a/core/b2b/core-services/soc/02-wazuh-manager.yaml
+++ b/core/b2b/core-services/soc/02-wazuh-manager.yaml
@@ -87,7 +87,7 @@ spec:
       volumes:
         - name: wazuh-manager-data
           persistentVolumeClaim:
-            claimName: wazuh-manager-data
+            claimName: wazuh-manager-data-v2
         - name: wazuh-manager-certs
           secret:
             secretName: wazuh-manager-certs
