--- a/core/b2b/core-services/soc/storage.yaml
+++ b/core/b2b/core-services/soc/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wazuh-indexer-data
+  name: wazuh-indexer-data-v2
   namespace: soc
 spec:
   storageClassName: manual
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wazuh-manager-data
+  name: wazuh-manager-data-v2
   namespace: soc
 spec:
   storageClassName: manual
