--- a/core/b2b/core-services/soc/wazuh-indexer-pv.yaml
+++ b/core/b2b/core-services/soc/wazuh-indexer-pv.yaml
@@ -10,6 +10,7 @@ spec:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: "/mnt/data/soc/indexer"
     type: DirectoryOrCreate
