--- a/core/b2b/core-services/soc/wazuh-manager-pv.yaml
+++ b/core/b2b/core-services/soc/wazuh-manager-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: wazuh-manager-pv
+  name: wazuh-manager-pv-v2
   labels:
     type: local
 spec:
@@ -10,6 +10,7 @@ spec:
     storage: 50Gi
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
   hostPath:
     path: "/mnt/data/soc/manager"
     type: DirectoryOrCreate
