--- a/.github/workflows/debug-soc.yml
+++ b/.github/workflows/debug-soc.yml
@@ -6,6 +6,9 @@ jobs:
   debug:
     runs-on: swarm-runners-scaleset
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Setup Kubectl Tunnel
         uses: ./.github/actions/kubectl-tunnel
         with:
