fix(soc): shorten wazuh-indexer port name to comply with 15 char limit

--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -24,7 +24,7 @@ metadata:
 spec:
   ports:
     - port: 9300
-      name: indexer-transport
+      name: idx-transport
       targetPort: 9300
   selector:
     app: wazuh-indexer
@@ -75,7 +75,7 @@ spec:
             - containerPort: 9200
               name: indexer-rest
             - containerPort: 9300
-              name: indexer-transport
+              name: idx-transport
           env:
             - name: OPENSEARCH_JAVA_OPTS
               value: "-Xms1g -Xmx1g"
