--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -47,6 +47,7 @@ spec:
     metadata:
       labels:
         app: wazuh-indexer
+        deploy/timestamp: "2026-02-12-force-update"
     spec:
       terminationGracePeriodSeconds: 10
       initContainers:
