fix(soc): correct admin_dn format to json array in wazuh-indexer

--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -103,9 +103,9 @@ spec:
             - name: plugins.security.ssl.http.pemtrustedcas_filepath
               value: "certs/root-ca.pem"
             - name: plugins.security.authcz.admin_dn
-              value: "CN=admin,O=Wazuh,L=California,C=US"
+              value: '["CN=admin,O=Wazuh,L=California,C=US"]'
             - name: plugins.security.nodes_dn
-              value: "CN=wazuh-indexer,O=Wazuh,L=California,C=US"
+              value: '["CN=wazuh-indexer,O=Wazuh,L=California,C=US"]'
             - name: plugins.security.allow_default_init_securityindex
               value: "true"
             - name: plugins.security.restapi.roles_enabled
