fix(soc): add ingress with backend-protocol HTTPS for wazuh-dashboard

--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - 02-wazuh-manager.yaml
   - 03-dashboard-config.yaml
   - 03-wazuh-dashboard.yaml
+  - ingress.yaml
   - 04-wazuh-security-init.yaml
 
 commonLabels:
