fix(soc): add admin_dn with OU=Wazuh to wazuh-indexer-config

--- a/core/b2b/core-services/soc/wazuh-indexer-config.yaml
+++ b/core/b2b/core-services/soc/wazuh-indexer-config.yaml
@@ -29,10 +29,12 @@ data:
     plugins.security.ssl.http.enabled_protocols:
       - "TLSv1.2"
     plugins.security.authcz.admin_dn:
+      - "CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US"
       - "CN=admin,O=Wazuh,L=California,C=US"
     plugins.security.check_snapshot_restore_write_privileges: true
     plugins.security.enable_snapshot_restore_privilege: true
     plugins.security.nodes_dn:
+      - "CN=wazuh-indexer,OU=Wazuh,O=Wazuh,L=California,C=US"
       - "CN=wazuh-indexer,O=Wazuh,L=California,C=US"
     plugins.security.restapi.roles_enabled:
       - "all_access"
