fix(soc): force restart indexer/dashboard and recreate security-init job v3

--- a/core/b2b/core-services/soc/03-wazuh-dashboard.yaml
+++ b/core/b2b/core-services/soc/03-wazuh-dashboard.yaml
@@ -30,6 +30,7 @@ spec:
     metadata:
       labels:
         app: wazuh-dashboard
+        deploy/timestamp: "2026-02-12-force-restart-v3"
     spec:
       affinity:
         podAntiAffinity:
