--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -47,7 +47,7 @@ spec:
     metadata:
       labels:
         app: wazuh-indexer
-        deploy/timestamp: "2026-02-12-force-update"
+        deploy/timestamp: "2026-02-12-force-restart-v3"
     spec:
       terminationGracePeriodSeconds: 10
       initContainers:
