--- a/core/b2b/core-services/soc/01-wazuh-indexer.yaml
+++ b/core/b2b/core-services/soc/01-wazuh-indexer.yaml
@@ -47,7 +47,7 @@ spec:
     metadata:
       labels:
         app: wazuh-indexer
-        deploy/timestamp: "2026-02-12-force-restart-v3"
+        deploy/timestamp: "2026-02-12-force-restart-v4"
     spec:
       terminationGracePeriodSeconds: 10
       initContainers:
@@ -103,9 +103,9 @@ spec:
             - name: plugins.security.ssl.http.pemtrustedcas_filepath
               value: "certs/root-ca.pem"
             - name: plugins.security.authcz.admin_dn
-              value: '["CN=admin,O=Wazuh,L=California,C=US"]'
+              value: '["CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US", "CN=admin,O=Wazuh,L=California,C=US"]'
             - name: plugins.security.nodes_dn
-              value: '["CN=wazuh-indexer,O=Wazuh,L=California,C=US"]'
+              value: '["CN=wazuh-indexer,OU=Wazuh,O=Wazuh,L=California,C=US", "CN=wazuh-indexer,O=Wazuh,L=California,C=US"]'
             - name: plugins.security.allow_default_init_securityindex
               value: "true"
             - name: plugins.security.restapi.roles_enabled
