Change runner from self-hosted to swarm-runners-scaleset

--- a/.github/workflows/ops-node-management.yml
+++ b/.github/workflows/ops-node-management.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   manage-node:
-    runs-on: self-hosted
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Checkout
         uses: actions/checkout@v4
