--- a/.github/workflows/ops-node-management.yml
+++ b/.github/workflows/ops-node-management.yml
@@ -23,10 +23,18 @@ on:
 
 jobs:
   manage-node:
-    runs-on: self-hosted
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Kubectl Tunnel
+        uses: ./.github/actions/kubectl-tunnel
+        with:
+          host: ${{ secrets.KAOS_SSH_HOST_1 }}
+          username: ${{ secrets.KAOS_SSH_USER }}
+          key: ${{ secrets.KAOS_SSH_KEY_PRIV }}
+          port: ${{ secrets.KAOS_SSH_PORT_1 }}
 
       - name: Execute Node Operation
         run: |
