--- a/core/b2b/core-services/soc/kustomization.yaml
+++ b/core/b2b/core-services/soc/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: soc
 
-# force deploy 2026-02-12-fix-admin-dn-configmap-v4
+# force deploy 
 resources:
   - 00-setup-job.yaml
   - wazuh-indexer-config.yaml
