--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 # Excepciones para Wazuh Certs (Local Deployment)
 !core/b2b/core-services/soc/wazuh-certificates/*.pem
 !core/b2b/core-services/soc/wazuh-certificates/*-key.pem
+
+# Excepciones de la IA
+.trae/*
