chore(docs): restructure documentation, update index automation and add architecture guide

--- a/.github/workflows/docs-index-auto-update.yml
+++ b/.github/workflows/docs-index-auto-update.yml
@@ -30,4 +30,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "docs: auto-update README index [skip ci]"
-          file_pattern: core/docs/README.md
+          file_pattern: core/docs/README.md index.md
