--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -110,7 +110,7 @@ jobs:
           #    git push origin ${{ github.ref }} --force-with-lease
           # fi
           
-  handle_failure:
+  handle-failure:
       runs-on: swarm-runners-scaleset
       needs: [job-core]
       if: ${{ failure() }} 
@@ -122,7 +122,7 @@ jobs:
             
   end-workflow:
     runs-on: swarm-runners-scaleset
-    needs: [job-core, handle-success, handle_failure, commit-results]
+    needs: [job-core, handle-success, handle-failure, commit-results]
     if: ${{ always() }} 
     env:
       GH_TOKEN: ${{ github.token }}
