--- a/.github/workflows/add-doc-to-db.yml
+++ b/.github/workflows/add-doc-to-db.yml
@@ -126,6 +126,15 @@ jobs:
     if: always()
     runs-on: swarm-runners-scaleset
     steps:
+      - id: repo
+        name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+        
       - name: Trigger Inspector
         env:
           GH_TOKEN: ${{ github.token }}
