--- a/.github/workflows/watchdog-node-health.yml
+++ b/.github/workflows/watchdog-node-health.yml
@@ -73,6 +73,15 @@ jobs:
       - name: Log Success
         run: echo "Watchdog scan completed successfully."
 
+      - id: repo
+        name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+
       - name: Trigger Cluster Audit
         run: |
           echo "📸 Triggering post-watchdog cluster audit..."
@@ -92,6 +101,15 @@ jobs:
     if: always()
     runs-on: swarm-runners-scaleset
     steps:
+      - id: repo
+        name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+        
       - name: Trigger Inspector
         env:
           GH_TOKEN: ${{ github.token }}
